--- a/404.html
+++ b/404.html
@@ -33,8 +33,8 @@
 
   
 
-  <link rel="alternate" href="https://dimkastan.github.io/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
-  <link rel="feed" href="https://dimkastan.github.io/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -133,70 +133,70 @@
   <h2>Recent Posts</h2>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/post/">Posts</a></li>
+    <li><a href="/post/">Posts</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/post/getting-started/">Getting started with the Academic framework for Hugo</a></li>
+    <li><a href="/post/getting-started/">Getting started with the Academic framework for Hugo</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/post/widgets/">Customizing the homepage with widgets</a></li>
+    <li><a href="/post/widgets/">Customizing the homepage with widgets</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/post/managing-content/">Managing content</a></li>
+    <li><a href="/post/managing-content/">Managing content</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/post/writing-markdown-latex/">Writing content with Markdown, LaTeX, and Shortcodes</a></li>
+    <li><a href="/post/writing-markdown-latex/">Writing content with Markdown, LaTeX, and Shortcodes</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/post/migrate-from-jekyll/">Migrate from Jekyll to Hugo</a></li>
+    <li><a href="/post/migrate-from-jekyll/">Migrate from Jekyll to Hugo</a></li>
   </ul>
   
 
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/vhar_pat_rec/">HEp-2 cell classification with Vector of Hierarchically Aggregated Residuals</a></li>
+    <li><a href="/publication/vhar_pat_rec/">HEp-2 cell classification with Vector of Hierarchically Aggregated Residuals</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/erci-gait/">KAD - An Intelligent System for Categorizing and Assessing the State of Patients with Multiple Sclerosis</a></li>
+    <li><a href="/publication/erci-gait/">KAD - An Intelligent System for Categorizing and Assessing the State of Patients with Multiple Sclerosis</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/">Publications</a></li>
+    <li><a href="/publication/">Publications</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/gait_rec_fuse_eucl_rieman/">Gait based recognition via fusing information from Euclidean and Riemannian manifolds</a></li>
+    <li><a href="/publication/gait_rec_fuse_eucl_rieman/">Gait based recognition via fusing information from Euclidean and Riemannian manifolds</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/hep-2_cell_patrec_2014/">HEp-2 cells classification via sparse representation of textural features fused into dissimilarity space</a></li>
+    <li><a href="/publication/hep-2_cell_patrec_2014/">HEp-2 cells classification via sparse representation of textural features fused into dissimilarity space</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/pose-based-action-recognition/">Pose-based human action recognition via sparse representation in dissimilarity space</a></li>
+    <li><a href="/publication/pose-based-action-recognition/">Pose-based human action recognition via sparse representation in dissimilarity space</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/gait_using_kinect/">A framework for gait-based recognition using Kinect</a></li>
+    <li><a href="/publication/gait_using_kinect/">A framework for gait-based recognition using Kinect</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/hep-2_cell_ijait/">HEp-2 Cell Classification Using Descriptors Fused into the Dissimilarity Space into the Dissimilarity Space</a></li>
+    <li><a href="/publication/hep-2_cell_ijait/">HEp-2 Cell Classification Using Descriptors Fused into the Dissimilarity Space into the Dissimilarity Space</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/parsimonious_inference/">Parsimonious Inference on Convolutional Neural Networks: Learning and applying on-line kernel activation rules</a></li>
+    <li><a href="/publication/parsimonious_inference/">Parsimonious Inference on Convolutional Neural Networks: Learning and applying on-line kernel activation rules</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://dimkastan.github.io/publication/gait_grad_descriptors/">Pose-based gait recognition with local gradient descriptors and hierarchically aggregated residuals</a></li>
+    <li><a href="/publication/gait_grad_descriptors/">Pose-based gait recognition with local gradient descriptors and hierarchically aggregated residuals</a></li>
   </ul>
   
 
