--- a/publication/index.html
+++ b/publication/index.html
@@ -28,13 +28,13 @@
 
   
 
-  <link rel="alternate" href="https://dimkastan.github.io/publication/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
-  <link rel="feed" href="https://dimkastan.github.io/publication/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="feed" href="/publication/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://dimkastan.github.io/publication/">
+  <link rel="canonical" href="/publication/">
 
   
 
@@ -161,12 +161,12 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/vhar_pat_rec/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/vhar_pat_rec/">
   Details
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
+<a class="btn btn-primary btn-outline btn-xs" href="/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
   PDF
 </a>
 
@@ -192,7 +192,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/erci-gait/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/erci-gait/">
   Details
 </a>
 
@@ -223,7 +223,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/gait_rec_fuse_eucl_rieman/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/gait_rec_fuse_eucl_rieman/">
   Details
 </a>
 
@@ -254,7 +254,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/pose-based-action-recognition/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/pose-based-action-recognition/">
   Details
 </a>
 
@@ -285,7 +285,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/hep-2_cell_patrec_2014/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/hep-2_cell_patrec_2014/">
   Details
 </a>
 
@@ -316,7 +316,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/gait_grad_descriptors/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/gait_grad_descriptors/">
   Details
 </a>
 
@@ -347,7 +347,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/parsimonious_inference/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/parsimonious_inference/">
   Details
 </a>
 
@@ -378,7 +378,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/hep-2_cell_ijait/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/hep-2_cell_ijait/">
   Details
 </a>
 
@@ -409,7 +409,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://dimkastan.github.io/publication/gait_using_kinect/">
+<a class="btn btn-primary btn-outline btn-xs" href="/publication/gait_using_kinect/">
   Details
 </a>
 
