--- a/publication_types/0/index.html
+++ b/publication_types/0/index.html
@@ -33,13 +33,13 @@
 
   
 
-  <link rel="alternate" href="https://dimkastan.github.io/publication_types/0/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
-  <link rel="feed" href="https://dimkastan.github.io/publication_types/0/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="alternate" href="/publication_types/0/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="feed" href="/publication_types/0/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://dimkastan.github.io/publication_types/0/">
+  <link rel="canonical" href="/publication_types/0/">
 
   
 
@@ -138,14 +138,14 @@
   
   
   <div>
-    <h2><a href="https://dimkastan.github.io/publication/erci-gait/">KAD - An Intelligent System for Categorizing and Assessing the State of Patients with Multiple Sclerosis</a></h2>
+    <h2><a href="/publication/erci-gait/">KAD - An Intelligent System for Categorizing and Assessing the State of Patients with Multiple Sclerosis</a></h2>
     <div class="article-style">
       
     </div>
   </div>
   
   <div>
-    <h2><a href="https://dimkastan.github.io/publication/parsimonious_inference/">Parsimonious Inference on Convolutional Neural Networks: Learning and applying on-line kernel activation rules</a></h2>
+    <h2><a href="/publication/parsimonious_inference/">Parsimonious Inference on Convolutional Neural Networks: Learning and applying on-line kernel activation rules</a></h2>
     <div class="article-style">
       
     </div>
