--- a/publication/vhar_pat_rec/index.html
+++ b/publication/vhar_pat_rec/index.html
@@ -33,13 +33,13 @@
 
   
 
-  <link rel="alternate" href="https://dimkastan.github.io/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
-  <link rel="feed" href="https://dimkastan.github.io/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Dimitris Kastaniotis">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://dimkastan.github.io/publication/vhar_pat_rec/">
+  <link rel="canonical" href="/publication/vhar_pat_rec/">
 
   
 
@@ -143,35 +143,35 @@
   <ul class="share">
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fdimkastan.github.io%2fpublication%2fvhar_pat_rec%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fvhar_pat_rec%2f"
          target="_blank">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals&amp;url=https%3a%2f%2fdimkastan.github.io%2fpublication%2fvhar_pat_rec%2f"
+         href="https://twitter.com/intent/tweet?text=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals&amp;url=%2fpublication%2fvhar_pat_rec%2f"
          target="_blank">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fdimkastan.github.io%2fpublication%2fvhar_pat_rec%2f&amp;title=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fvhar_pat_rec%2f&amp;title=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals"
          target="_blank">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fdimkastan.github.io%2fpublication%2fvhar_pat_rec%2f&amp;title=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fvhar_pat_rec%2f&amp;title=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals"
          target="_blank">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals&amp;body=https%3a%2f%2fdimkastan.github.io%2fpublication%2fvhar_pat_rec%2f">
+         href="mailto:?subject=HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals&amp;body=%2fpublication%2fvhar_pat_rec%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -215,7 +215,7 @@
     <div class="col-sm-10">
       <div class="row">
         <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-        <div class="col-xs-12 col-sm-9">Pattern Recognition Letters</div>
+        <div class="col-xs-12 col-sm-9">Pattern Recognition</div>
       </div>
     </div>
     <div class="col-sm-1"></div>
@@ -248,7 +248,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://dimkastan.github.io/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
+<a class="btn btn-primary btn-outline" href="/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
   PDF
 </a>
 
@@ -277,7 +277,7 @@
   <nav>
   <ul class="pager">
     
-    <li class="previous"><a href="https://dimkastan.github.io/publication/erci-gait/"><span
+    <li class="previous"><a href="/publication/erci-gait/"><span
       aria-hidden="true">&larr;</span> KAD - An Intelligent System for Categorizing and Assessing the State of Patients with Multiple Sclerosis</a></li>
     
 
