minor changes in vhar, and teaching

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S0031320316304009">
   PDF
 </a>
 
@@ -569,7 +569,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S0031320316304009">
   PDF
 </a>
 
@@ -813,9 +813,7 @@
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p>This is an example of using the <em>custom</em> widget to create your own homepage section.</p>
-
-<p>From 2010 to 2015 I was a teaching assistant in the following undergraduate studies:</p>
+    <p>From 2010 to 2015 I was a teaching assistant (6-moth contracts with University Of Patras) in the following undergraduate studies:</p>
 
 <ul>
 <li>Programming I: Fortran/C++</li>
