--- a/publication/index.html
+++ b/publication/index.html
@@ -166,7 +166,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.sciencedirect.com/science/article/pii/S0031320316304009">
   PDF
 </a>
 
