--- a/publication/vhar_pat_rec/index.html
+++ b/publication/vhar_pat_rec/index.html
@@ -248,7 +248,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="/HEp-2%20cell%20classification%20with%20Vector%20of%20Hierarchically%20Aggregated%20Residuals">
+<a class="btn btn-primary btn-outline" href="http://www.sciencedirect.com/science/article/pii/S0031320316304009">
   PDF
 </a>
 
