bibe2012 publication fixed Title and link

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
       <div class="pub-publication">
         
-        /home/ioanna/Desktop/experiments/Evaluation/umich-stacked-hourglass.t7
+        2012 IEEE 12th International Conference on Bioinformatics &amp; Bioengineering (BIBE)
         
       </div>
 
@@ -574,7 +574,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=6622766&amp;isnumber=6622665">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.upcv.upatras.gr/papers/2012/TheodorakopoulosBIBE2012.pdf">
   PDF
 </a>
 
@@ -582,6 +582,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.upcv.upatras.gr/hep2.html">
+  Project
+</a>
 
 
 
