--- a/publication/hep2-bibe2012/index.html
+++ b/publication/hep2-bibe2012/index.html
@@ -220,7 +220,7 @@
     <div class="col-sm-10">
       <div class="row">
         <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-        <div class="col-xs-12 col-sm-9">/home/ioanna/Desktop/experiments/Evaluation/umich-stacked-hourglass.t7</div>
+        <div class="col-xs-12 col-sm-9">2012 IEEE 12th International Conference on Bioinformatics &amp; Bioengineering (BIBE)</div>
       </div>
     </div>
     <div class="col-sm-1"></div>
@@ -253,7 +253,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=6622766&amp;isnumber=6622665">
+<a class="btn btn-primary btn-outline" href="http://www.upcv.upatras.gr/papers/2012/TheodorakopoulosBIBE2012.pdf">
   PDF
 </a>
 
@@ -261,6 +261,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline" href="http://www.upcv.upatras.gr/hep2.html">
+  Project
+</a>
 
 
 
