--- a/publication/index.html
+++ b/publication/index.html
@@ -608,7 +608,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=6622766&amp;isnumber=6622665">
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.upcv.upatras.gr/papers/2012/TheodorakopoulosBIBE2012.pdf">
   PDF
 </a>
 
@@ -616,6 +616,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="http://www.upcv.upatras.gr/hep2.html">
+  Project
+</a>
 
 
 </p>
