added teaching Machine Learning

--- a/index.html
+++ b/index.html
@@ -927,13 +927,17 @@
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p>From 2010 to 2015 I was a teaching assistant (6-moth contracts with University Of Patras) in the following undergraduate studies:</p>
+    <p>In 2017 I taught the following class in the MSc program, Electronics and Information Processing <br/>
+<a href="http://www.upcv.upatras.gr/personal/kastaniotis/MLCourse/" target="_blank">Supervised Machine Learning Class </a><br/>
+- Lecture 1: Linear models for Regression and Classification, Regularization, Generative approaches, Optimization<br/>
+- Lecture 2: Kernel Methods, Maximum Margin Classifiers, Support Vector Machines<br/>
+Position: Research Fellow at University of Patras
+<br /></p>
 
-<ul>
-<li>Programming I: Fortran/C++</li>
-<li>Programming II: Fortran/C++</li>
-<li>Basic Electronics</li>
-</ul>
+<p>From 2010 to 2015 I was a teaching assistant (6-moth contracts with University Of Patras) in the following undergraduate studies:<br/>
+- Programming I: Fortran/C++
+- Programming II: Fortran/C++
+- Basic Electronics</p>
 
   </div>
 </div>
